--- a/package.json
+++ b/package.json
@@ -1,25 +1,14 @@
 {
-  "name": "blokz-refex",
+  "name": "blokz-reflex",
   "version": "1.0.0",
-  "description": "Jeu Blokz Refex avec multijoueur, backend Node.js",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [
-    "game",
-    "socket.io",
-    "express",
-    "sqlite3",
-    "bcrypt"
-  ],
-  "author": "TonNom",
-  "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "socket.io": "^4.5.1",
-    "sqlite3": "^5.1.2"
+    "socket.io": "^4.7.2",
+    "sqlite3": "^5.1.6"
   }
 }
-
