--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "blokz-reflex",
   "version": "1.0.0",
+  "description": "Jeu multijoueur écran partagé",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
     "express": "^4.18.2",
-    "socket.io": "^4.7.2",
-    "sqlite3": "^5.1.6"
+    "socket.io": "^4.7.2"
   }
 }
