--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "blokz-reflex-server",
+  "name": "blokz-backend",
   "version": "1.0.0",
-  "description": "Serveur pour Blokz Reflex",
-  "main": "serveur.js",
+  "description": "Backend pour Blokz Reflex",
+  "main": "server.js",
   "scripts": {
-    "start": "node serveur.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
-  },
-  "engines": {
-    "node": ">=16"
+    "express": "^4.18.2",
+    "bcrypt": "^5.1.0",
+    "jsonwebtoken": "^9.0.0",
+    "cors": "^2.8.5",
+    "body-parser": "^1.20.2"
   }
 }
+
 
