--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
   "name": "blokz-backend",
   "version": "1.0.0",
-  "description": "Backend pour Blokz Reflex",
+  "description": "Backend Blokz Reflex",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "bcrypt": "^5.1.0",
-    "jsonwebtoken": "^9.0.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0"
   }
 }
+
 
 
