--- a/manifest.json
+++ b/manifest.json
@@ -1,20 +1,22 @@
 {
   "name": "Blokz Reflex",
   "short_name": "Blokz",
-  "start_url": "/blokz-reflex.com/",
+  "start_url": "/blokz-reflex/",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#1a73e8",
+  "background_color": "#ffffff",
+  "theme_color": "#00ffc8",
   "icons": [
     {
-      "src": "/icons/icon-192.png",
+      "src": "icon-192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "/icons/icon-512.png",
+      "src": "icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ]
 }
+
+
